Server : ajout DELETE friendsRequest
